# veloapi

./: .gitignore  CMakeLists.txt  README.md
include/: velo.hpp  veloDebug.hpp
src/: main.cpp  velo.cpp
